@@ -122,6 +122,21 @@
                     </arguments>
                 </configuration>
             </plugin>
+          <plugin>  <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.0.0-M5</version>
+              <configuration>
+                  <argLine>
+                      --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                      --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                      --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                      --add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                      --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                      --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                      -Dprism.showDirtyRegions=true
+                  </argLine>
+              </configuration>
+          </plugin>
         </plugins>
     </build>
 </project>
